testdata/golden/invalid/features/natural_language.cm
# Invalid Natural Language
# These should produce errors

## average of with no arguments
average of

## square root of with no argument
square root of

## square root of negative
square root of -1

## Typos (not implemented)
averageof 1, 2, 3
squarerootof 25
